--- a/noclutterprefs/Resources/Info.plist
+++ b/noclutterprefs/Resources/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>NoClutterPrefs</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.iamparsa.noclutterprefs</string>
+	<string>com.dcproducts.noclutterprefs</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
